# tianjy_activity

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
tianjy_activity/: document.py  hooks.py  modules.txt  to_text.py
tianjy_activity/config/: desktop.py  docs.py
tianjy_activity/tianjy_activity/doctype/tianjy_activity/: test_tianjy_activity.py  tianjy_activity.js  tianjy_activity.json  tianjy_activity.py
tianjy_activity/tianjy_activity/doctype/tianjy_activity_changed/: tianjy_activity_changed.json  tianjy_activity_changed.py
tianjy_activity/tianjy_activity/doctype/tianjy_activity_configuration/: test_tianjy_activity_configuration.py  tianjy_activity_configuration.js  tianjy_activity_configuration.json  tianjy_activity_configuration.py
tianjy_activity/translations/: zh.csv
